# linux-host-firewall-manager

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
.opencode/plans/: firewall-manager-rewrite-v2.md
config/: config.example.toml
crates/fw-agent/: Cargo.toml
crates/fw-agent-client/: Cargo.toml
crates/fw-agent-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/fw-agent-client/tests/: agent_client_types.rs
crates/fw-agent/src/: compiler.rs  config.rs  drift.rs  enrollment.rs  lib.rs  main.rs  mtls.rs  protected_cidrs.rs  pull_client.rs  pull_loop.rs  safe_mode.rs  server.rs
crates/fw-agent/src/backend/: mod.rs
crates/fw-agent/src/routes/: health.rs  mod.rs  rules.rs  system_info.rs
crates/fw-agent/tests/: pull_client_types.rs
crates/fw-auth/: Cargo.toml
crates/fw-auth/src/: error.rs  jwt.rs  lib.rs  password.rs  rbac.rs  session.rs
crates/fw-ca/: Cargo.toml
crates/fw-ca/src/: ca.rs  error.rs  lib.rs
crates/fw-core/: Cargo.toml
crates/fw-core/src/: audit.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs  policy.rs  request_id.rs
crates/fw-core/tests/: enrollment_pull_config.rs  policy_engine.rs  pull_model_types.rs
crates/fw-reports/: Cargo.toml
crates/fw-reports/src/: csv.rs  error.rs  lib.rs  pdf.rs
crates/fw-web/: Cargo.toml
crates/fw-web/src/: lib.rs  main.rs  secret_key.rs
crates/fw-web/src/routes/: agent_api.rs  auth.rs  ca.rs  certificates.rs  deployment.rs  enrollment.rs  groups.rs  health.rs  hosts.rs  jobs.rs  maintenance_windows.rs  mod.rs  policy_sets.rs  rules.rs  settings.rs  users.rs
crates/fw-web/tests/: agent_api_types.rs  ip_whitelist_validation.rs
crates/fw-web/tests/integration/: host_authz.rs  mod.rs
crates/fw-worker/: Cargo.toml
crates/fw-worker/src/: audit_anchor.rs  drift_poller.rs  health_poller.rs  job_executor.rs  main.rs  push_dispatcher.rs  refresh_listener.rs  stale_agent_detector.rs
crates/fw-worker/tests/: stale_detector_logic.rs
crates/migrate-secrets/: Cargo.toml
crates/migrate-secrets/src/: main.rs
debian/: postinst  postrm  prerm
docs/: ca-compromise-runbook.md
docs/runbooks/: firewall-recovery.md  restore.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx
frontend/src/hooks/: useJobWebSocket.ts
frontend/src/pages/: CertificatesPage.tsx  DashboardPage.tsx  DeploymentPage.tsx  GroupsPage.tsx  HostDetailPage.tsx  HostsPage.tsx  JobsPage.tsx  LoginPage.tsx  MaintenanceWindowsPage.tsx  MfaSetupPage.tsx  PatchDeploymentPage.tsx  PolicySetsPage.tsx  ProfilePage.tsx  RepoManagementPage.tsx  ReportsPage.tsx  RulesPage.tsx  SettingsPage.tsx  SsoCallbackPage.tsx  UsersPage.tsx
frontend/src/pages/__tests__/: SsoCallbackPage.test.tsx
frontend/src/store/: authStore.ts
frontend/src/test/: setup.ts
frontend/src/theme/: theme.ts
frontend/src/types/: index.ts
migrations/: 001_initial_schema.sql  002_seed_admin.sql  004_maintenance_windows.sql  005_audit_hardening.sql  006_protected_cidrs.sql  007_rule_policy_decisions.sql  008_enrollment_tokens.sql  010_operator_host_groups.sql  011_audit_external_anchor.sql  012_ca_tier.sql  013_agent_binary_tracking.sql  014_container_runtime.sql  016_account_lockout.sql  017_oidc_provider.sql  018_reporter_role.sql  021_crl_health_status.sql  022_crl_audit_actions.sql  025_firewall_backend_mappings.sql  026_prevent_duplicate_auto_jobs.sql  028_agent_check_ins.sql  029_pending_actions.sql  030_drop_orphaned_tables.sql
package-build/DEBIAN/: control
package-build/lib/systemd/system/: firewall-agent.service  firewall-manager.target
package-build/usr/share/firewall-manager/frontend/: index.html
package-build/usr/share/firewall-manager/frontend/assets/: index-Bh6mbrvW.js  index-DuZnN3fm.css  mui-BjeAz6CM.js  vendor-Bq9q4v8h.js
package-build/usr/share/firewall-manager/migrations/: 003_jobs_scheduling.sql  009_jti_sessions.sql  015_per_host_lock.sql  019_enrollment_requests.sql  020_encrypt_secrets_at_rest.sql  023_self_upgrade.sql  024_upgrade_audit_actions.sql  027_repo_sync_tables.sql
scripts/: build-package.sh  create-release.py
systemd/: firewall-manager-web.service  firewall-manager-worker.service
