[package]
name = "fw-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fw-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
totp-rs = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }