[package]
name = "fw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
proptest = { workspace = true }