[package]
name = "fw-reports"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fw-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }